--- a/day5/exercises/embeddings_intro.ipynb
+++ b/day5/exercises/embeddings_intro.ipynb
@@ -43,7 +43,23 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.8/dist-packages/gensim/similarities/__init__.py:15: UserWarning: The gensim.similarities.levenshtein submodule is disabled, because the optional Levenshtein package <https://pypi.org/project/python-Levenshtein/> is unavailable. Install Levenhstein (e.g. `pip install python-Levenshtein`) to suppress this warning.\n",
+      "  warnings.warn(msg)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[==================================================] 100.0% 128.1/128.1MB downloaded\n"
+     ]
+    }
+   ],
    "source": [
     "import gensim.downloader as api\n",
     "\n",
@@ -101,17 +117,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[('dog', 0.8798074722290039),\n",
-       " ('rabbit', 0.7424426674842834),\n",
-       " ('cats', 0.7323004007339478),\n",
+       " ('rabbit', 0.7424427270889282),\n",
+       " ('cats', 0.732300341129303),\n",
        " ('monkey', 0.7288709878921509),\n",
-       " ('pet', 0.7190139889717102),\n",
+       " ('pet', 0.719014048576355),\n",
        " ('dogs', 0.7163872718811035),\n",
        " ('mouse', 0.6915250420570374),\n",
        " ('puppy', 0.6800068020820618),\n",
@@ -119,7 +135,7 @@
        " ('spider', 0.6501135230064392)]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +178,7 @@
        "['woman']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -199,25 +215,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('queen', 0.7698541283607483),\n",
-       " ('monarch', 0.6843380928039551),\n",
-       " ('throne', 0.6755735874176025),\n",
+       "[('queen', 0.7698540687561035),\n",
+       " ('monarch', 0.6843381524085999),\n",
+       " ('throne', 0.6755736470222473),\n",
        " ('daughter', 0.6594556570053101),\n",
-       " ('princess', 0.6520534753799438),\n",
+       " ('princess', 0.6520534157752991),\n",
        " ('prince', 0.6517034769058228),\n",
        " ('elizabeth', 0.6464517712593079),\n",
-       " ('mother', 0.6311717629432678),\n",
+       " ('mother', 0.631171703338623),\n",
        " ('emperor', 0.6106470823287964),\n",
        " ('wife', 0.6098655462265015)]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -238,15 +254,15 @@
        " ('queen', 0.783441424369812),\n",
        " ('monarch', 0.6933802366256714),\n",
        " ('throne', 0.6833109855651855),\n",
-       " ('daughter', 0.680908203125),\n",
-       " ('prince', 0.6713142395019531),\n",
+       " ('daughter', 0.6809081435203552),\n",
+       " ('prince', 0.6713141798973083),\n",
        " ('princess', 0.664408266544342),\n",
-       " ('mother', 0.6579325199127197),\n",
+       " ('mother', 0.6579325795173645),\n",
        " ('elizabeth', 0.6563301086425781),\n",
-       " ('father', 0.6392419338226318)]"
+       " ('father', 0.6392418742179871)]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +302,7 @@
        "       -0.33089 , -0.52881 ,  0.16483 , -0.98878 ], dtype=float32)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -314,17 +330,17 @@
       "text/plain": [
        "[('iguanas', 0.6652647852897644),\n",
        " ('tortoises', 0.6609669923782349),\n",
-       " ('rattlesnakes', 0.6575520038604736),\n",
+       " ('rattlesnakes', 0.6575519442558289),\n",
        " ('crocodiles', 0.6308841109275818),\n",
        " ('snakes', 0.6242752075195312),\n",
        " ('toads', 0.6229562163352966),\n",
        " ('alligators', 0.6116349697113037),\n",
        " ('lizards', 0.6112721562385559),\n",
        " ('turtles', 0.582252025604248),\n",
-       " ('salamanders', 0.5808340311050415)]"
+       " ('salamanders', 0.5808339715003967)]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -344,16 +360,16 @@
        "[('monty', 0.6886237263679504),\n",
        " ('php', 0.586538553237915),\n",
        " ('perl', 0.5784407258033752),\n",
-       " ('cleese', 0.5446675419807434),\n",
-       " ('flipper', 0.511298418045044),\n",
+       " ('cleese', 0.5446676015853882),\n",
+       " ('flipper', 0.5112984776496887),\n",
        " ('ruby', 0.5066928267478943),\n",
        " ('spamalot', 0.505638837814331),\n",
-       " ('javascript', 0.5030568838119507),\n",
+       " ('javascript', 0.5030569434165955),\n",
        " ('reticulated', 0.4983375668525696),\n",
-       " ('monkey', 0.49764132499694824)]"
+       " ('monkey', 0.49764129519462585)]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -430,9 +446,9 @@
      "output_type": "stream",
      "text": [
       "Precision:\n",
-      "0.8764847650197969\n",
+      "0.8593267197918361\n",
       "Recall:\n",
-      "0.81464\n"
+      "0.84544\n"
      ]
     }
    ],
@@ -461,28 +477,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:2: DeprecationWarning: Call to deprecated `syn0` (Attribute will be removed in 4.0.0, use self.vectors instead).\n",
-      "  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = api.load(\"glove-wiki-gigaword-100\")\n",
-    "w2vmodel = dict(zip(bigmodel.index2word, model.syn0))"
+    "w2vmodel = dict(zip(model.index_to_key, model.vectors))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -490,9 +511,9 @@
      "output_type": "stream",
      "text": [
       "Precision:\n",
-      "0.5051736125311849\n",
+      "0.7312174389909515\n",
       "Recall:\n",
-      "0.98816\n"
+      "0.85336\n"
      ]
     }
    ],
@@ -534,7 +555,8 @@
    ],
    "source": [
     "bigmodel = api.load(\"word2vec-google-news-300\")\n",
-    "w2vmodel = dict(zip(bigmodel.index2word, bigmodel.syn0))"
+    "# w2vmodel = dict(zip(bigmodel.index2word, bigmodel.syn0)) # GENSIM3\n",
+    "w2vmodel = dict(zip(model.index_to_key, model.vectors))    # GENSIM4"
    ]
   },
   {
@@ -696,7 +718,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
