--- a/fall-2022/day5/exercise/transformers-custom-dataset.ipynb
+++ b/fall-2022/day5/exercise/transformers-custom-dataset.ipynb
@@ -17,11 +17,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6ffe50f",
+   "id": "2bbc92c2",
    "metadata": {},
    "source": [
-    "\n",
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/annekroon/gesis-machine-learning/blob/main/day5/imdb.ipynb)"
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://github.com/annekroon/gesis-machine-learning/blob/main/fall-2022/day5/exercise/transformers-custom-dataset.ipynb)"
    ]
   },
   {
