--- a/fall-2022/day5/exercise/transformers-custom-dataset.ipynb
+++ b/fall-2022/day5/exercise/transformers-custom-dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a7bc832a",
+   "id": "b6e43ce7",
    "metadata": {},
    "source": [
     "# Fine tuning transformers models on a custom dataset in a down-stream classification task\n",
@@ -17,10 +17,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bbc92c2",
+   "id": "1c945214",
    "metadata": {},
    "source": [
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://github.com/annekroon/gesis-machine-learning/blob/main/fall-2022/day5/exercise/transformers-custom-dataset.ipynb)"
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/annekroon/gesis-machine-learning/blob/main/fall-2022/day5/exercise/transformers-custom-dataset.ipynb)"
    ]
   },
   {
