--- a/fall-2022/day1/exercises-vectorizers/Understanding_vectorizers.ipynb
+++ b/fall-2022/day1/exercises-vectorizers/Understanding_vectorizers.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "In the following code examples, we will experiment with vectorizers to understand a bit better how they work. Feel free to adjust the code, and try things out yourself.\n",
     "\n",
-    "For now, we will practice with `sklearn`'s vectorizers. however, packages such as `gensim` offer their own build in functionality to vectorize the data. We will start working with `gensim` in week 4.\n"
+    "For now, we will practice with `sklearn`'s vectorizers. however, packages such as `gensim` offer their own build in functionality to vectorize the data. \n"
    ]
   },
   {
@@ -233,8 +233,7 @@
    "metadata": {},
    "source": [
     "a. Do you understand the output printed above?  \n",
-    "b. What happens if you change the `count` to a `tfidf` vectorizer?  \n",
-    "c. Adjust the code using the slides of [this week](https://github.com/annekroon/CCS-2/blob/main/week02/week02-lecture.pdf), page 40. More specifically, try removing stopwords, pruning and see how your results are affected. "
+    "b. What happens if you change the `count` to a `tfidf` vectorizer?  "
    ]
   }
  ],
