--- a/modules/working-with-text/basic-string-operations.tex
+++ b/modules/working-with-text/basic-string-operations.tex
@@ -20,7 +20,7 @@ data = [ "I <b>really</b> liked this movie! It was great.  ", "  What an awful m
 
 data_stripped = [e.strip() for e in data]
 data_lower = [e.lower() for e in data_stripped]
-data_clean = [e.replace("<b>",").replace("</b>",") for e in data_lower]
+data_clean = [e.replace("<b>","").replace("</b>","") for e in data_lower]
 
 # or, more efficient, in one single step:
 data_clean2 = [e.strip().lower().replace("<b>","").replace("</b>","") for e in data]
@@ -83,70 +83,4 @@ Use tab completion for more!
 
 
 
-
-\begin{frame}[fragile]{From test to large-scale analysis: General approach}
-1. Take a single string and test your idea
-\begin{lstlisting}
-t = "This is a test test test."
-print(t.count("test"))
-\end{lstlisting}
-2a. You'd assume it to return 3. If so, scale it up:
-\begin{lstlisting}
-results = []
-for t in listwithallmytexts:
-    r = t.count("test")
-    print(f"{t} contains the substring {r} times")
-    results.append(r)
-\end{lstlisting}
-
-2b. If you \emph{only} need to get the list of results, a list comprehension is more elegant:
-\begin{lstlisting}
-results = [t.count("test") for t in listwithallmytexts]
-\end{lstlisting}
-
-
-\end{frame}
-
-
-\begin{frame}[fragile]{General approach}
-\Large
-
-\textcolor{red}{Test on a single string, then make a for loop or list comprehension!}
-
-\pause
-
-\normalsize
-
-\begin{alertblock}{Own functions}
-If it gets more complex, you can write your own function and then use it in the list comprehension:
-\begin{lstlisting}
-def mycleanup(t):
-   # do sth with string t here, create new string t2
-   return t2
-  
-results = [mycleanup(t) for t in allmytexts]
-\end{lstlisting}
-\end{alertblock}
-\end{frame}
-
-
-\begin{frame}[fragile]{Pandas string methods as alternative}
-If you select column with strings from a pandas dataframe, pandas offers a collection of string methods (via \texttt{.str.}) that largely mirror standard Python string methods:
-
-\begin{lstlisting}
-df['newcoloumnwithresults'] = df['columnwithtext'].str.count("bla")
-\end{lstlisting} 
-
-
-\pause
-
-\begin{alertblock}{To pandas or not to pandas for text?}
-Partly a matter of taste. 
-
-Not-too-large dataset with a lot of extra columns? Advanced statistical analysis planned? Sounds like pandas.
-
-It's mainly a lot of text? Wanna do some machine learning later on anyway? It's large and (potentially) messy? Doesn't sound like pandas is a good idea.
-\end{alertblock}
-
-\end{frame}
 
