--- a/fall-2022/day2/spacy-examples.ipynb
+++ b/fall-2022/day2/spacy-examples.ipynb
@@ -2,9 +2,12 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "48986672",
+   "id": "e640e703",
    "metadata": {},
    "source": [
+    "# Short Spacy demo\n",
+    "\n",
+    "\n",
     "import `spacy` and load the language model that fits your needs.\n",
     "[here](https://spacy.io/usage) you can find recommendations that fit your operating system/ type of tasks.\n"
    ]
@@ -12,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "efe5ddbf",
+   "id": "f3dc7968",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,19 +26,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "e7c0c14d",
+   "execution_count": 119,
+   "id": "8be88c09",
    "metadata": {},
    "outputs": [],
    "source": [
     "import spacy \n",
+    "from spacy import displacy\n",
     "nlp = spacy.load(\"en_core_web_sm\")"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3a3482e1",
+   "metadata": {},
+   "source": [
+    "## Exploring Spacy"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 73,
-   "id": "f98db0f8",
+   "execution_count": 85,
+   "id": "cd64511e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,16 +60,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8a84c0f",
+   "id": "398e7a98",
    "metadata": {},
    "source": [
-    "create a an `nlp`-object; a `doc` container"
+    "Create a an `nlp` object: this is often referred to as the `doc container`. This containers has a lot of information stored inside..."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "id": "33c377d2",
+   "execution_count": 86,
+   "id": "5cf0b36d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b39f8481",
+   "id": "baa3fe68",
    "metadata": {},
    "source": [
     "let's inspect what is inside..."
@@ -75,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "43642641",
+   "id": "f219be5b",
    "metadata": {},
    "outputs": [
     {
@@ -96,30 +108,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "28d9e4e9",
+   "execution_count": 93,
+   "id": "a8d309b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The length of the original str is: 2462\n",
+      "The length of the doc container object is: 452\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"The length of the original str is: {len(text)}\")\n",
+    "print(f\"The length of the doc container object is: {len(doc)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6a1adb7",
+   "metadata": {},
+   "source": [
+    "Inspect what is in the `doc` container"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "c1101fe2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2462"
+       "[Mannheim, ,, officially, the, University, City, of, Mannheim, (, German]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(doc)\n",
-    "len(text)"
+    "[e for e in doc][:10] #prints all first 10 elements in the doc container"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "id": "c4b6aed6",
+   "execution_count": 101,
+   "id": "33404dff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,8 +167,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "id": "6ec654a6",
+   "execution_count": 103,
+   "id": "ce082db2",
    "metadata": {},
    "outputs": [
     {
@@ -138,19 +177,79 @@
        "'GPE'"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "f.ent_type_"
+    "f.ent_type_ # use tab completion to get an overview of the associated methods"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "id": "928aa732",
+   "execution_count": 105,
+   "id": "fc923489",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Countries, cities, states'"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spacy.explain('GPE') #ask spacy what this GPE means"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "id": "efe49dc8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lets inspect the results!!\n",
+      "\n",
+      "\n",
+      "tokenized:\n",
+      "\n",
+      "['Mannheim', ',', 'officially', 'the', 'University', 'City', 'of', 'Mannheim', '(', 'german', ':', 'Universitätsstadt', 'Mannheim', ')', ',', 'be', 'the', 'second', '-', 'large', 'city', 'in', 'the', 'german', 'state']\n",
+      "\n",
+      "\n",
+      "original: \n",
+      "\n",
+      "['Mannheim,', 'officially', 'the', 'University', 'City', 'of', 'Mannheim', '(German:', 'Universitätsstadt', 'Mannheim),', 'is', 'the', 'second-largest', 'city', 'in', 'the', 'German', 'state', 'of', 'Baden-Württemberg', 'after', 'the', 'state', 'capital', 'of']\n"
+     ]
+    }
+   ],
+   "source": [
+    "lemmatized_docs = [token.lemma_ for token in doc]\n",
+    "print(\"Lets inspect the results!!\\n\\n\")\n",
+    "print(f\"tokenized:\\n\\n{lemmatized_docs[:25]}\\n\\n\") \n",
+    "print(f\"original: \\n\\n{text.split()[:25]}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24df1a9a",
+   "metadata": {},
+   "source": [
+    "## Entities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "7fb265c9",
    "metadata": {},
    "outputs": [
     {
@@ -217,19 +316,19 @@
        " (first, spacy.tokens.span.Span)]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[(e, type(e)) for e in doc.ents]"
+    "[(e, type(e)) for e in doc.ents] #this gives you all the entities inside the doc container"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "id": "41379d7e",
+   "execution_count": 120,
+   "id": "8b5822ca",
    "metadata": {},
    "outputs": [
     {
@@ -547,16 +646,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca6b682a",
+   "id": "3750bd86",
    "metadata": {},
    "source": [
-    "### Part of Speech\n"
+    "\n",
+    "\n",
+    "\n",
+    "## Part of Speech"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "id": "5079852a",
+   "execution_count": 125,
+   "id": "f1788d13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,14 +667,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "id": "3e071d5e",
+   "execution_count": 126,
+   "id": "a0476fe5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<span class=\"tex2jax_ignore\"><svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" xml:lang=\"en\" id=\"1719723d9d784478bd242ebaaf6d2422-0\" class=\"displacy\" width=\"925\" height=\"312.0\" direction=\"ltr\" style=\"max-width: none; height: 312.0px; color: #000000; background: #ffffff; font-family: Arial; direction: ltr\">\n",
+       "<span class=\"tex2jax_ignore\"><svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" xml:lang=\"en\" id=\"f7cb482a43e74ccabb92e47716c13263-0\" class=\"displacy\" width=\"925\" height=\"312.0\" direction=\"ltr\" style=\"max-width: none; height: 312.0px; color: #000000; background: #ffffff; font-family: Arial; direction: ltr\">\n",
        "<text class=\"displacy-token\" fill=\"currentColor\" text-anchor=\"middle\" y=\"222.0\">\n",
        "    <tspan class=\"displacy-word\" fill=\"currentColor\" x=\"50\">hello</tspan>\n",
        "    <tspan class=\"displacy-tag\" dy=\"2em\" fill=\"currentColor\" x=\"50\">INTJ</tspan>\n",
@@ -599,33 +701,33 @@
        "</text>\n",
        "\n",
        "<g class=\"displacy-arrow\">\n",
-       "    <path class=\"displacy-arc\" id=\"arrow-1719723d9d784478bd242ebaaf6d2422-0-0\" stroke-width=\"2px\" d=\"M70,177.0 C70,2.0 575.0,2.0 575.0,177.0\" fill=\"none\" stroke=\"currentColor\"/>\n",
+       "    <path class=\"displacy-arc\" id=\"arrow-f7cb482a43e74ccabb92e47716c13263-0-0\" stroke-width=\"2px\" d=\"M70,177.0 C70,2.0 575.0,2.0 575.0,177.0\" fill=\"none\" stroke=\"currentColor\"/>\n",
        "    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n",
-       "        <textPath xlink:href=\"#arrow-1719723d9d784478bd242ebaaf6d2422-0-0\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">intj</textPath>\n",
+       "        <textPath xlink:href=\"#arrow-f7cb482a43e74ccabb92e47716c13263-0-0\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">intj</textPath>\n",
        "    </text>\n",
        "    <path class=\"displacy-arrowhead\" d=\"M70,179.0 L62,167.0 78,167.0\" fill=\"currentColor\"/>\n",
        "</g>\n",
        "\n",
        "<g class=\"displacy-arrow\">\n",
-       "    <path class=\"displacy-arc\" id=\"arrow-1719723d9d784478bd242ebaaf6d2422-0-1\" stroke-width=\"2px\" d=\"M245,177.0 C245,89.5 395.0,89.5 395.0,177.0\" fill=\"none\" stroke=\"currentColor\"/>\n",
+       "    <path class=\"displacy-arc\" id=\"arrow-f7cb482a43e74ccabb92e47716c13263-0-1\" stroke-width=\"2px\" d=\"M245,177.0 C245,89.5 395.0,89.5 395.0,177.0\" fill=\"none\" stroke=\"currentColor\"/>\n",
        "    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n",
-       "        <textPath xlink:href=\"#arrow-1719723d9d784478bd242ebaaf6d2422-0-1\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">poss</textPath>\n",
+       "        <textPath xlink:href=\"#arrow-f7cb482a43e74ccabb92e47716c13263-0-1\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">poss</textPath>\n",
        "    </text>\n",
        "    <path class=\"displacy-arrowhead\" d=\"M245,179.0 L237,167.0 253,167.0\" fill=\"currentColor\"/>\n",
        "</g>\n",
        "\n",
        "<g class=\"displacy-arrow\">\n",
-       "    <path class=\"displacy-arc\" id=\"arrow-1719723d9d784478bd242ebaaf6d2422-0-2\" stroke-width=\"2px\" d=\"M420,177.0 C420,89.5 570.0,89.5 570.0,177.0\" fill=\"none\" stroke=\"currentColor\"/>\n",
+       "    <path class=\"displacy-arc\" id=\"arrow-f7cb482a43e74ccabb92e47716c13263-0-2\" stroke-width=\"2px\" d=\"M420,177.0 C420,89.5 570.0,89.5 570.0,177.0\" fill=\"none\" stroke=\"currentColor\"/>\n",
        "    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n",
-       "        <textPath xlink:href=\"#arrow-1719723d9d784478bd242ebaaf6d2422-0-2\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">nsubj</textPath>\n",
+       "        <textPath xlink:href=\"#arrow-f7cb482a43e74ccabb92e47716c13263-0-2\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">nsubj</textPath>\n",
        "    </text>\n",
        "    <path class=\"displacy-arrowhead\" d=\"M420,179.0 L412,167.0 428,167.0\" fill=\"currentColor\"/>\n",
        "</g>\n",
        "\n",
        "<g class=\"displacy-arrow\">\n",
-       "    <path class=\"displacy-arc\" id=\"arrow-1719723d9d784478bd242ebaaf6d2422-0-3\" stroke-width=\"2px\" d=\"M595,177.0 C595,89.5 745.0,89.5 745.0,177.0\" fill=\"none\" stroke=\"currentColor\"/>\n",
+       "    <path class=\"displacy-arc\" id=\"arrow-f7cb482a43e74ccabb92e47716c13263-0-3\" stroke-width=\"2px\" d=\"M595,177.0 C595,89.5 745.0,89.5 745.0,177.0\" fill=\"none\" stroke=\"currentColor\"/>\n",
        "    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n",
-       "        <textPath xlink:href=\"#arrow-1719723d9d784478bd242ebaaf6d2422-0-3\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">attr</textPath>\n",
+       "        <textPath xlink:href=\"#arrow-f7cb482a43e74ccabb92e47716c13263-0-3\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">attr</textPath>\n",
        "    </text>\n",
        "    <path class=\"displacy-arrowhead\" d=\"M745.0,179.0 L753.0,167.0 737.0,167.0\" fill=\"currentColor\"/>\n",
        "</g>\n",
@@ -640,15 +742,13 @@
     }
    ],
    "source": [
-    "from spacy import displacy\n",
-    "\n",
     "displacy.render(doc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "id": "4b4a9f0d",
+   "execution_count": 121,
+   "id": "c4a6b94b",
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +757,7 @@
        "'interjection'"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -668,8 +768,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "id": "08c23acb",
+   "execution_count": 122,
+   "id": "b299ffea",
    "metadata": {},
    "outputs": [
     {
@@ -678,7 +778,7 @@
        "'possession modifier'"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -689,16 +789,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1cf793ce",
+   "id": "6325edbf",
    "metadata": {},
    "source": [
-    "whether something is a noun or a verb is called `part of speech`. The relationships between the words are referenced to as `depencnies`."
+    "Wether something is a noun or a verb is called **part of speech**. The method `.pos_` associated with elements in the doc container will give you information on the part of speech. \n",
+    "\n",
+    "The relationships between the words are referenced to as **dependencies**. You can access this using the method `.dep_`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "id": "81190459",
+   "execution_count": 127,
+   "id": "2b3668e7",
    "metadata": {},
    "outputs": [
     {
@@ -720,7 +822,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f36705a",
+   "id": "1492e9b2",
    "metadata": {},
    "source": [
     "https://spacy.io/usage/linguistic-features"
