--- a/fall-2022/day2/day2-morning-fileformats.tex
+++ b/fall-2022/day2/day2-morning-fileformats.tex
@@ -33,7 +33,7 @@
 \usepackage[style=apa, backend = biber]{biblatex}
 \DeclareLanguageMapping{american}{american-UoN}
 \addbibresource{../../bdaca/bdaca.bib}
-\graphicspath{{../../bdaca/pictures/}}
+\graphicspath{{../../pictures/}}
 \renewcommand*{\bibfont}{\tiny}
 
 \usepackage{tikz}
@@ -99,7 +99,6 @@
 \begin{frame}[standout]
 Everything clear from yesterday?
 \end{frame}
-
 
 
 
