added possible solutions

--- a/fall-2022/day4/day4-morning.tex
+++ b/fall-2022/day4/day4-morning.tex
@@ -53,7 +53,7 @@
 \usepackage{csquotes}
 \usepackage[style=apa, backend = biber]{biblatex}
 \DeclareLanguageMapping{american}{american-UoN}
-\addbibresource{../literature.bib}
+\addbibresource{../../literature.bib}
 \renewcommand*{\bibfont}{\tiny}
 
 \usepackage{tikz}
